# Thread_-UDP-CoAP-

./: .gitignore
01.Window_ThreadDevice/OT_coap_client/: CMakeLists.txt
01.Window_ThreadDevice/OT_coap_server/: CMakeLists.txt
01.Window_ThreadDevice/Thread_-UDP-CoAP-/: README.md
01.Window_ThreadDevice/Thread_CoAP/: CMakeLists.txt
01.Window_ThreadDevice/Thread_UDP/: .clangd  CMakeLists.txt  Thread_UDP_미니프로젝트_명세서_v3.md  prj.conf
01.Window_ThreadDevice/Thread_UDP/inc/app/: app_btn.h  app_fsm.h  app_led.h
01.Window_ThreadDevice/Thread_UDP/inc/thread/: thread.h
01.Window_ThreadDevice/Thread_UDP/inc/udp/: udp.h
01.Window_ThreadDevice/Thread_UDP/src/: main.c
01.Window_ThreadDevice/Thread_UDP/src/app/: app_main.c
01.Window_ThreadDevice/Thread_UDP/src/udp/: udp.c
02.Raspberrypi_BorderRouter_Borker/: server  server.c
02.Raspberrypi_BorderRouter_Borker/1. HelloWorld/: HelloWorld  HelloWorld.c
02.Raspberrypi_BorderRouter_Borker/2. TCP_echo/: Echo_server  TCP_Echo_server.c  echo
02.Raspberrypi_BorderRouter_Borker/3. UDP_echo/: UDP_Echo  UDP_Echo_server  UDP_Echo_server.c
02.Raspberrypi_BorderRouter_Borker/4. MQTT test/: Makefile  command.c  command.h  main.c  mqtt.c  mqtt_rpi  sensor.c  sensor.h
03.VMware_server/: client
03.VMware_server/1. HelloWorld/: HelloWorld  HelloWorld.c
03.VMware_server/2. Echo_server/: Echo_server  Echo_server.c  echo2
03.VMware_server/3. UDP_Echo/: UDP_Echo_client  UDP_Echo_client.c
03.VMware_server/4.MQTT_VM/: Makefile  input.c  input.h  main.c  mqtt.c  mqtt.h  mqtt_vm
Thread_UDP/: USER_GUIDE.md
(+15 files in other folders)
